# camera-control

./: .browserslistrc  .editorconfig  .eslintrc.cjs  .gitignore  .lintstagedrc.js  .npmrc  .prettierignore  .prettierrc.json  .stylelintignore  .stylelintrc.json  AGENTS.md  LICENSE  eslint.config.js  lint-staged.config.js  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.js  stylelint.config.js  svelte.config.js  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: renovate.json
.github/workflows/: release.yaml  test.yaml
dist-isolation/: index.js
src/: app.css  app.html  bindings.ts  commands.ts  common.ts  index.html  main.css  main.ts  settings.css  settings.html  settings.ts  store.ts  styles.css  tsconfig.json
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: camera.rs  camera_state.rs  error.rs  main.rs  pelco_camera.rs  port_state.rs  ui_state.rs
src-tauri/src/visca/: commands.rs  error.rs  mod.rs  packet.rs  port.rs  response.rs
src/lib/: bindings.ts  common.ts  ui-state.svelte.ts  ui_state.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
