[package]
name = "camera-control"
version = "23.4.7-0"
description = "An application to control the AViPAS camera at CrossLife Community Church"
authors = ["Bryan Forbes <bryan@reigndropsfall.net>"]
license = "BSD-3-Clause"
repository = "https://github.com/bryanforbes/camera-control"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.5.2", features = ["isolation"] }

[dependencies]
tauri = { version = "=1.6.8", features = ["dialog-ask", "dialog-message", "isolation", "updater", "window-create", "window-set-focus", "window-show"] }
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "=1.0.118"
serialport = "=4.3.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
thiserror = "=1.0.61"
log = "=0.4.21"
pretty_env_logger = "=0.5.0"
pelcodrs = "=0.2.1"

[dev-dependencies]
test-case = "=3.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"    # Strip expensive panic clean-up logic
codegen-units = 1  # Compile crates one after another so the compiler can optimize better
lto = true         # Enables link to optimizations
opt-level = "z"    # Optimize for binary size
strip = true       # Remove debug symbols
