[package]
name = "camera-control"
version = "23.4.7-0"
description = "An application to control the AViPAS camera at CrossLife Community Church"
authors = ["Bryan Forbes <bryan@reigndropsfall.net>"]
license = "BSD-3-Clause"
repository = "https://github.com/bryanforbes/camera-control"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.2.0", features = ["config-toml", "isolation"] }

[dependencies]
tauri = { version = "=2.5.1", features = ["config-toml", "isolation"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
serialport = "=4.7.1"
tauri-plugin-dialog = "=2.2.1"
tauri-plugin-store = "=2.2.0"
tauri-plugin-window-state = "=2.2.2"
thiserror = "=2.0.12"
log = "=0.4.27"
pretty_env_logger = "=0.5.0"
pelcodrs = "=0.2.1"

[dev-dependencies]
test-case = "=3.3.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic = "abort"    # Strip expensive panic clean-up logic
codegen-units = 1  # Compile crates one after another so the compiler can optimize better
lto = true         # Enables link to optimizations
opt-level = "z"    # Optimize for binary size
strip = true       # Remove debug symbols

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "=2.7.1"
